Fix icon alignment of buttons with no text (text: false in .button()) and removed commented code for get-device-list button

--- a/css/dygraph.css
+++ b/css/dygraph.css
@@ -43,10 +43,6 @@
     clear:right;
 }
 
-.beer-chart-controls button span.ui-icon{
-    margin-left: -2px; /* fix centering of icon for small button */
-}
-
 button.toggle{
     width: 20px;
     height: 20px;
